# ai-usage-widget

./: .gitignore  CHANGELOG.md  README.md  ai_usage_widget.py  install.sh  pyproject.toml  uninstall.sh  upgrade.sh  validate.sh
.github/workflows/: ci.yml
ai_usage_widget/: __init__.py  __main__.py  app.py  config.py  constants.py  formatting.py  markup.py  models.py  notifications.py  polling.py  ui.py
ai_usage_widget/providers/: __init__.py  claude.py  common.py  openai.py
tests/: test_config.py  test_formatting.py  test_markup.py  test_notifications.py  test_polling.py  test_providers.py
